generator/preprocessed/raylib.h


typedef struct Vector2 {
    float x;
    float y;
} Vector2;
typedef struct Vector3 {
    float x;
    float y;
    float z;
} Vector3;
typedef struct Vector4 {
    float x;
    float y;
    float z;
    float w;
} Vector4;
typedef struct Matrix {
    float m0;
    float m1;
    float m2;
    float m3;
    float m4;
    float m5;
    float m6;
    float m7;
    float m8;
    float m9;
    float m10;
    float m11;
    float m12;
    float m13;
    float m14;
    float m15;
} Matrix;
typedef struct Color {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture2D {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture2D;
typedef struct RenderTexture2D {
    unsigned int id;        
    Texture2D texture;      
    Texture2D depth;        
    bool depthTexture;      
} RenderTexture2D;
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int type;               
} Camera3D;
#define Camera Camera3D     
typedef struct Camera2D {
    Vector2 offset;         
    Vector2 target;         
    float rotation;         
    float zoom;             
} Camera2D;
typedef struct BoundingBox {
    Vector3 min;            
    Vector3 max;            
} BoundingBox;
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;  
    unsigned short *indices;
    float *baseVertices;    
    float *baseNormals;     
    float *weightBias;      
    int *weightId;          
    unsigned int vaoId;     
    unsigned int vboId[7];  
} Mesh;
typedef struct Shader {
    unsigned int id;                
    int locs[MAX_SHADER_LOCATIONS]; 
} Shader;
typedef struct MaterialMap {
    Texture2D texture;      
    Color color;            
    float value;            
} MaterialMap;
typedef struct Material {
    Shader shader;          
    MaterialMap maps[MAX_MATERIAL_MAPS]; 
    float *params;          
} Material;
typedef struct Model {
    Mesh mesh;              
    Matrix transform;       
    Material material;      
} Model;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct RayHitInfo {
    bool hit;               
    float distance;         
    Vector3 position;       
    Vector3 normal;         
} RayHitInfo;
typedef struct Wave {
    unsigned int sampleCount;   
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
    void *data;                 
} Wave;
typedef struct Sound {
    void *audioBuffer;      
    unsigned int source;    
    unsigned int buffer;    
    int format;             
} Sound;
typedef struct AudioStream {
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
    void *audioBuffer;          
    int format;                 
    unsigned int source;        
    unsigned int buffers[2];    
} AudioStream;
typedef struct VrDeviceInfo {
    int hResolution;                
    int vResolution;                
    float hScreenSize;              
    float vScreenSize;              
    float vScreenCenter;            
    float eyeToScreenDistance;      
    float lensSeparationDistance;   
    float interpupillaryDistance;   
    float lensDistortionValues[4];  
    float chromaAbCorrection[4];    
} VrDeviceInfo;
typedef struct VrStereoConfig {
    RenderTexture2D stereoFbo;      
    Shader distortionShader;        
    Matrix eyesProjection[2];       
    Matrix eyesViewOffset[2];       
    int eyeViewportRight[4];        
    int eyeViewportLeft[4];         
} VrStereoConfig;
typedef void (*TraceLogCallback)(int logType, const char *text, va_list args);
RLAPI void InitWindow(int width, int height, const char *title);  
RLAPI bool WindowShouldClose(void);                               
RLAPI void CloseWindow(void);                                     
RLAPI bool IsWindowReady(void);                                   
RLAPI bool IsWindowMinimized(void);                               
RLAPI bool IsWindowResized(void);                                 
RLAPI bool IsWindowHidden(void);                                  
RLAPI void ToggleFullscreen(void);                                
RLAPI void UnhideWindow(void);                                    
RLAPI void HideWindow(void);                                      
RLAPI void SetWindowIcon(Image image);                            
RLAPI void SetWindowTitle(const char *title);                     
RLAPI void SetWindowPosition(int x, int y);                       
RLAPI void SetWindowMonitor(int monitor);                         
RLAPI void SetWindowMinSize(int width, int height);               
RLAPI void SetWindowSize(int width, int height);                  
RLAPI void *GetWindowHandle(void);                                
RLAPI int GetScreenWidth(void);                                   
RLAPI int GetScreenHeight(void);                                  
RLAPI int GetMonitorCount(void);                                  
RLAPI int GetMonitorWidth(int monitor);                           
RLAPI int GetMonitorHeight(int monitor);                          
RLAPI int GetMonitorPhysicalWidth(int monitor);                   
RLAPI int GetMonitorPhysicalHeight(int monitor);                  
RLAPI const char *GetMonitorName(int monitor);                    
RLAPI const char *GetClipboardText(void);                         
RLAPI void SetClipboardText(const char *text);                    
RLAPI bool IsCursorHidden(void);                                  
RLAPI void EnableCursor(void);                                    
RLAPI void DisableCursor(void);                                   
RLAPI void ClearBackground(Color color);                          
RLAPI void BeginDrawing(void);                                    
RLAPI void EndDrawing(void);                                      
RLAPI void BeginMode2D(Camera2D camera);                          
RLAPI void EndMode2D(void);                                       
RLAPI void BeginMode3D(Camera3D camera);                          
RLAPI void EndMode3D(void);                                       
RLAPI void BeginTextureMode(RenderTexture2D target);              
RLAPI void EndTextureMode(void);                                  
RLAPI Ray GetMouseRay(Vector2 mousePosition, Camera camera);      
RLAPI Vector2 GetWorldToScreen(Vector3 position, Camera camera);  
RLAPI Matrix GetCameraMatrix(Camera camera);                      
RLAPI void SetTargetFPS(int fps);                                 
RLAPI int GetFPS(void);                                           
RLAPI float GetFrameTime(void);                                   
RLAPI double GetTime(void);                                       
RLAPI int ColorToInt(Color color);                                
RLAPI Vector4 ColorNormalize(Color color);                        
RLAPI Vector3 ColorToHSV(Color color);                            
RLAPI Color ColorFromHSV(Vector3 hsv);                            
RLAPI Color GetColor(int hexValue);                               
RLAPI Color Fade(Color color, float alpha);                       
RLAPI void SetConfigFlags(unsigned char flags);                   
RLAPI void SetTraceLogLevel(int logType);                         
RLAPI void SetTraceLogExit(int logType);                          
RLAPI void SetTraceLogCallback(TraceLogCallback callback);        
RLAPI void TraceLog(int logType, const char *text, ...);          
RLAPI void TakeScreenshot(const char *fileName);                  
RLAPI int GetRandomValue(int min, int max);                       
RLAPI bool FileExists(const char *fileName);                      
RLAPI bool IsFileExtension(const char *fileName, const char *ext);
RLAPI const char *GetExtension(const char *fileName);             
RLAPI const char *GetFileName(const char *filePath);              
RLAPI const char *GetFileNameWithoutExt(const char *filePath);    
RLAPI const char *GetDirectoryPath(const char *fileName);         
RLAPI const char *GetWorkingDirectory(void);                      
RLAPI char **GetDirectoryFiles(const char *dirPath, int *count);  
RLAPI void ClearDirectoryFiles(void);                             
RLAPI bool ChangeDirectory(const char *dir);                      
RLAPI bool IsFileDropped(void);                                   
RLAPI char **GetDroppedFiles(int *count);                         
RLAPI void ClearDroppedFiles(void);                               
RLAPI long GetFileModTime(const char *fileName);                  
RLAPI void StorageSaveValue(int position, int value);             
RLAPI int StorageLoadValue(int position);                         
RLAPI void OpenURL(const char *url);                              
RLAPI bool IsKeyPressed(int key);                             
RLAPI bool IsKeyDown(int key);                                
RLAPI bool IsKeyReleased(int key);                            
RLAPI bool IsKeyUp(int key);                                  
RLAPI int GetKeyPressed(void);                                
RLAPI void SetExitKey(int key);                               
RLAPI bool IsGamepadAvailable(int gamepad);                   
RLAPI bool IsGamepadName(int gamepad, const char *name);      
RLAPI const char *GetGamepadName(int gamepad);                
RLAPI bool IsGamepadButtonPressed(int gamepad, int button);   
RLAPI bool IsGamepadButtonDown(int gamepad, int button);      
RLAPI bool IsGamepadButtonReleased(int gamepad, int button);  
RLAPI bool IsGamepadButtonUp(int gamepad, int button);        
RLAPI int GetGamepadButtonPressed(void);                      
RLAPI int GetGamepadAxisCount(int gamepad);                   
RLAPI float GetGamepadAxisMovement(int gamepad, int axis);    
RLAPI bool IsMouseButtonPressed(int button);                  
RLAPI bool IsMouseButtonDown(int button);                     
RLAPI bool IsMouseButtonReleased(int button);                 
RLAPI bool IsMouseButtonUp(int button);                       
RLAPI int GetMouseX(void);                                    
RLAPI int GetMouseY(void);                                    
RLAPI Vector2 GetMousePosition(void);                         
RLAPI void SetMousePosition(int x, int y);                    
RLAPI void SetMouseOffset(int offsetX, int offsetY);          