generator/preprocessed/raylib-preprocessed.h

typedef enum { false, true } bool;
void ShowCursor(void);
void HideCursor(void);