raylib.odin


Camera2D :: struct #packed {
    offset : Vector2,
    target : Vector2,
    rotation : _c.float,
    zoom : _c.float,
};

BoundingBox :: struct #packed {
    min : Vector3,
    max : Vector3,
};

Mesh :: struct #packed {
    vertexCount : _c.int,
    triangleCount : _c.int,
    vertices : ^_c.float,
    texcoords : ^_c.float,
    texcoords2 : ^_c.float,
    normals : ^_c.float,
    tangents : ^_c.float,
    colors : ^_c.uchar,
    indices : ^_c.ushort,
    baseVertices : ^_c.float,
    baseNormals : ^_c.float,
    weightBias : ^_c.float,
    weightId : ^_c.int,
    vaoId : _c.uint,
    vboId : [7]_c.uint,
};

Shader :: struct #packed {
    id : _c.uint,
    locs : [32]_c.int,
};

MaterialMap :: struct #packed {
    texture : Texture2D,
    color : Color,
    value : _c.float,
};

Material :: struct #packed {
    shader : Shader,
    maps : [12]MaterialMap,
    params : ^_c.float,
};

Model :: struct #packed {
    mesh : Mesh,
    transform : Matrix,
    material : Material,
};

Ray :: struct #packed {
    position : Vector3,
    direction : Vector3,
};

RayHitInfo :: struct #packed {
    hit : bool,
    distance : _c.float,
    position : Vector3,
    normal : Vector3,
};

Wave :: struct #packed {
    sampleCount : _c.uint,
    sampleRate : _c.uint,
    sampleSize : _c.uint,
    channels : _c.uint,
    data : rawptr,
};

Sound :: struct #packed {
    audioBuffer : rawptr,
    source : _c.uint,
    buffer : _c.uint,
    format : _c.int,
};

MusicData :: struct #packed {};

AudioStream :: struct #packed {
    sampleRate : _c.uint,
    sampleSize : _c.uint,
    channels : _c.uint,
    audioBuffer : rawptr,
    format : _c.int,
    source : _c.uint,
    buffers : [2]_c.uint,
};

VrDeviceInfo :: struct #packed {
    hResolution : _c.int,
    vResolution : _c.int,
    hScreenSize : _c.float,
    vScreenSize : _c.float,
    vScreenCenter : _c.float,
    eyeToScreenDistance : _c.float,
    lensSeparationDistance : _c.float,
    interpupillaryDistance : _c.float,
    lensDistortionValues : [4]_c.float,
    chromaAbCorrection : [4]_c.float,
};

VrStereoConfig :: struct #packed {
    stereoFbo : RenderTexture2D,
    distortionShader : Shader,
    eyesProjection : [2]Matrix,
    eyesViewOffset : [2]Matrix,
    eyeViewportRight : [4]_c.int,
    eyeViewportLeft : [4]_c.int,
};

@(default_calling_convention="c")
foreign raylib {

    @(link_name="InitWindow")
    InitWindow :: proc(
        width : _c.int,
        height : _c.int,
        title : cstring
    ) ---;

    @(link_name="WindowShouldClose")
    WindowShouldClose :: proc() -> bool ---;

    @(link_name="CloseWindow")
    CloseWindow :: proc() ---;

    @(link_name="IsWindowReady")
    IsWindowReady :: proc() -> bool ---;

    @(link_name="IsWindowMinimized")
    IsWindowMinimized :: proc() -> bool ---;

    @(link_name="IsWindowResized")
    IsWindowResized :: proc() -> bool ---;

    @(link_name="IsWindowHidden")
    IsWindowHidden :: proc() -> bool ---;

    @(link_name="ToggleFullscreen")
    ToggleFullscreen :: proc() ---;

    @(link_name="UnhideWindow")
    UnhideWindow :: proc() ---;

    @(link_name="HideWindow")
    HideWindow :: proc() ---;

    @(link_name="SetWindowIcon")
    SetWindowIcon :: proc(image : Image) ---;

    @(link_name="SetWindowTitle")
    SetWindowTitle :: proc(title : cstring) ---;

    @(link_name="SetWindowPosition")
    SetWindowPosition :: proc(
        x : _c.int,
        y : _c.int
    ) ---;

    @(link_name="SetWindowMonitor")
    SetWindowMonitor :: proc(monitor : _c.int) ---;

    @(link_name="SetWindowMinSize")
    SetWindowMinSize :: proc(
        width : _c.int,
        height : _c.int
    ) ---;

    @(link_name="SetWindowSize")
    SetWindowSize :: proc(
        width : _c.int,
        height : _c.int
    ) ---;

    @(link_name="GetWindowHandle")
    GetWindowHandle :: proc() -> rawptr ---;

    @(link_name="GetScreenWidth")
    GetScreenWidth :: proc() -> _c.int ---;

    @(link_name="GetScreenHeight")
    GetScreenHeight :: proc() -> _c.int ---;

    @(link_name="GetMonitorCount")
    GetMonitorCount :: proc() -> _c.int ---;

    @(link_name="GetMonitorWidth")
    GetMonitorWidth :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorHeight")
    GetMonitorHeight :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorPhysicalWidth")
    GetMonitorPhysicalWidth :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorPhysicalHeight")
    GetMonitorPhysicalHeight :: proc(monitor : _c.int) -> _c.int ---;

    @(link_name="GetMonitorName")
    GetMonitorName :: proc(monitor : _c.int) -> cstring ---;

    @(link_name="GetClipboardText")
    GetClipboardText :: proc() -> cstring ---;

    @(link_name="SetClipboardText")
    SetClipboardText :: proc(text : cstring) ---;

    @(link_name="ShowCursor")
    ShowCursor :: proc() ---;

    @(link_name="HideCursor")
    HideCursor :: proc() ---;

    @(link_name="IsCursorHidden")
    IsCursorHidden :: proc() -> bool ---;

    @(link_name="EnableCursor")
    EnableCursor :: proc() ---;

    @(link_name="DisableCursor")
    DisableCursor :: proc() ---;

    @(link_name="ClearBackground")
    ClearBackground :: proc(color : Color) ---;

    @(link_name="BeginDrawing")
    BeginDrawing :: proc() ---;

    @(link_name="EndDrawing")
    EndDrawing :: proc() ---;

    @(link_name="BeginMode2D")
    BeginMode2D :: proc(camera : Camera2D) ---;

    @(link_name="EndMode2D")
    EndMode2D :: proc() ---;

    @(link_name="BeginMode3D")
    BeginMode3D :: proc(camera : Camera3D) ---;

    @(link_name="EndMode3D")
    EndMode3D :: proc() ---;

    @(link_name="BeginTextureMode")
    BeginTextureMode :: proc(target : RenderTexture2D) ---;

    @(link_name="EndTextureMode")
    EndTextureMode :: proc() ---;

    @(link_name="GetMouseRay")
    GetMouseRay :: proc(
        mousePosition : Vector2,
        camera : Camera
    ) -> Ray ---;

    @(link_name="GetWorldToScreen")
    GetWorldToScreen :: proc(
        position : Vector3,
        camera : Camera
    ) -> Vector2 ---;

    @(link_name="GetCameraMatrix")
    GetCameraMatrix :: proc(camera : Camera) -> Matrix ---;

    @(link_name="SetTargetFPS")
    SetTargetFPS :: proc(fps : _c.int) ---;

    @(link_name="GetFPS")
    GetFPS :: proc() -> _c.int ---;

    @(link_name="GetFrameTime")
    GetFrameTime :: proc() -> _c.float ---;

    @(link_name="GetTime")
    GetTime :: proc() -> _c.double ---;

    @(link_name="ColorToInt")
    ColorToInt :: proc(color : Color) -> _c.int ---;

    @(link_name="ColorNormalize")
    ColorNormalize :: proc(color : Color) -> Vector4 ---;

    @(link_name="ColorToHSV")
    ColorToHSV :: proc(color : Color) -> Vector3 ---;

    @(link_name="ColorFromHSV")
    ColorFromHSV :: proc(hsv : Vector3) -> Color ---;

    @(link_name="GetColor")
    GetColor :: proc(hexValue : _c.int) -> Color ---;

    @(link_name="Fade")
    Fade :: proc(
        color : Color,
        alpha : _c.float
    ) -> Color ---;

    @(link_name="SetConfigFlags")
    SetConfigFlags :: proc(flags : _c.uchar) ---;

    @(link_name="SetTraceLogLevel")
    SetTraceLogLevel :: proc(logType : _c.int) ---;

    @(link_name="SetTraceLogExit")
    SetTraceLogExit :: proc(logType : _c.int) ---;

    @(link_name="SetTraceLogCallback")
    SetTraceLogCallback :: proc(callback : TraceLogCallback) ---;

    @(link_name="TraceLog")
    TraceLog :: proc(
        logType : _c.int,
        text : cstring
    ) ---;

    @(link_name="TakeScreenshot")
    TakeScreenshot :: proc(fileName : cstring) ---;

    @(link_name="GetRandomValue")
    GetRandomValue :: proc(
        min : _c.int,
        max : _c.int
    ) -> _c.int ---;

    @(link_name="FileExists")
    FileExists :: proc(fileName : cstring) -> bool ---;

    @(link_name="IsFileExtension")
    IsFileExtension :: proc(
        fileName : cstring,
        ext : cstring
    ) -> bool ---;

    @(link_name="GetExtension")
    GetExtension :: proc(fileName : cstring) -> cstring ---;

    @(link_name="GetFileName")
    GetFileName :: proc(filePath : cstring) -> cstring ---;

    @(link_name="GetFileNameWithoutExt")
    GetFileNameWithoutExt :: proc(filePath : cstring) -> cstring ---;

    @(link_name="GetDirectoryPath")
    GetDirectoryPath :: proc(fileName : cstring) -> cstring ---;

    @(link_name="GetWorkingDirectory")
    GetWorkingDirectory :: proc() -> cstring ---;

    @(link_name="GetDirectoryFiles")
    GetDirectoryFiles :: proc(
        dirPath : cstring,
        count : ^_c.int
    ) -> ^cstring ---;

    @(link_name="ClearDirectoryFiles")
    ClearDirectoryFiles :: proc() ---;

    @(link_name="ChangeDirectory")
    ChangeDirectory :: proc(dir : cstring) -> bool ---;

    @(link_name="IsFileDropped")
    IsFileDropped :: proc() -> bool ---;

    @(link_name="GetDroppedFiles")
    GetDroppedFiles :: proc(count : ^_c.int) -> ^cstring ---;

    @(link_name="ClearDroppedFiles")
    ClearDroppedFiles :: proc() ---;

    @(link_name="GetFileModTime")
    GetFileModTime :: proc(fileName : cstring) -> _c.long ---;

    @(link_name="StorageSaveValue")
    StorageSaveValue :: proc(
        position : _c.int,
        value : _c.int
    ) ---;

    @(link_name="StorageLoadValue")
    StorageLoadValue :: proc(position : _c.int) -> _c.int ---;

    @(link_name="OpenURL")
    OpenURL :: proc(url : cstring) ---;

    @(link_name="IsKeyPressed")
    IsKeyPressed :: proc(key : _c.int) -> bool ---;

    @(link_name="IsKeyDown")
    IsKeyDown :: proc(key : _c.int) -> bool ---;

    @(link_name="IsKeyReleased")
    IsKeyReleased :: proc(key : _c.int) -> bool ---;

    @(link_name="IsKeyUp")
    IsKeyUp :: proc(key : _c.int) -> bool ---;

    @(link_name="GetKeyPressed")
    GetKeyPressed :: proc() -> _c.int ---;

    @(link_name="SetExitKey")
    SetExitKey :: proc(key : _c.int) ---;

    @(link_name="IsGamepadAvailable")
    IsGamepadAvailable :: proc(gamepad : _c.int) -> bool ---;

    @(link_name="IsGamepadName")
    IsGamepadName :: proc(
        gamepad : _c.int,
        name : cstring
    ) -> bool ---;

    @(link_name="GetGamepadName")
    GetGamepadName :: proc(gamepad : _c.int) -> cstring ---;

    @(link_name="IsGamepadButtonPressed")
    IsGamepadButtonPressed :: proc(
        gamepad : _c.int,
        button : _c.int
    ) -> bool ---;

    @(link_name="IsGamepadButtonDown")
    IsGamepadButtonDown :: proc(
        gamepad : _c.int,
        button : _c.int
    ) -> bool ---;

    @(link_name="IsGamepadButtonReleased")
    IsGamepadButtonReleased :: proc(
        gamepad : _c.int,
        button : _c.int
    ) -> bool ---;

    @(link_name="IsGamepadButtonUp")
    IsGamepadButtonUp :: proc(
        gamepad : _c.int,
        button : _c.int
    ) -> bool ---;

    @(link_name="GetGamepadButtonPressed")
    GetGamepadButtonPressed :: proc() -> _c.int ---;

    @(link_name="GetGamepadAxisCount")
    GetGamepadAxisCount :: proc(gamepad : _c.int) -> _c.int ---;

    @(link_name="GetGamepadAxisMovement")
    GetGamepadAxisMovement :: proc(
        gamepad : _c.int,
        axis : _c.int
    ) -> _c.float ---;

    @(link_name="IsMouseButtonPressed")
    IsMouseButtonPressed :: proc(button : _c.int) -> bool ---;

    @(link_name="IsMouseButtonDown")
    IsMouseButtonDown :: proc(button : _c.int) -> bool ---;

    @(link_name="IsMouseButtonReleased")
    IsMouseButtonReleased :: proc(button : _c.int) -> bool ---;

    @(link_name="IsMouseButtonUp")
    IsMouseButtonUp :: proc(button : _c.int) -> bool ---;

    @(link_name="GetMouseX")
    GetMouseX :: proc() -> _c.int ---;

    @(link_name="GetMouseY")
    GetMouseY :: proc() -> _c.int ---;

    @(link_name="GetMousePosition")
    GetMousePosition :: proc() -> Vector2 ---;

    @(link_name="SetMousePosition")
    SetMousePosition :: proc(
        x : _c.int,
        y : _c.int
    ) ---;

    @(link_name="SetMouseOffset")
    SetMouseOffset :: proc(
        offsetX : _c.int,
        offsetY : _c.int
    ) ---;
